Changes to content

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Joey Ah-kiow's Website</title>
+		<title>Joey Ah-kiow | Home</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -26,14 +26,8 @@
 							<li><a href="./index.html">Home</a></li>
 							<li><a href="./about.html">About Me</a></li>
 							<li><a href="./projects.html">Projects</a></li>
-							<!-- <li><a href="generic.html">Generic</a></li> -->
 							<li><a href="./index.html#contact">Contact</a></li>
-							<!-- <li><a href="elements.html">Elements</a></li> -->
 						</ul>
-						<!-- <ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
-						</ul> -->
 					</nav>
 
 				<!-- Banner -->
@@ -55,96 +49,34 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- One -->
-							 <section id="overview" class="tiles">
+						<!-- Overview -->
+							<section id="overview" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="./images/02_about-background.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Projects</a></h3>
-										<p>Cool stuff I do</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">About Me</a></h3>
+										<h3><a href="./about.html" class="link">About Me</a></h3>
 										<p>Get to know me</p>
 									</header>
 								</article>
-								<!-- <article>
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
-										<p>Lorem etiam nullam</p>
-									</header>
-								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="./images/03_projects-background.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
-										<p>Nisl sed aliquam</p>
+										<h3><a href="projects.html" class="link">Projects</a></h3>
+										<p>Cool stuff I do</p>
 									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Consequat</a></h3>
-										<p>Ipsum dolor sit amet</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
-										<p>Feugiat amet tempus</p>
-									</header>
-								</article> -->
-							</section> 
-
-						<!-- Two -->
-							<!-- <section id="about">
-								<div class="inner">
-									<header class="major">
-										<h2>About Me</h2>
-									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-									<ul class="actions">
-										<li><a href="./resume.pdf" class="button icon solid fa-download" download>Download my resume</a></li>
-									</ul>
-								</div>
+								</article>								
 							</section>
-
-							<section id="projects">
-								<div class="inner">
-									<header class="major">
-										<h2>My Projects</h2>
-									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-									<ul class="actions">
-										<li><a href="./projects.html" class="button next">Go to my projects</a></li>
-									</ul>
-								</div>
-							</section> -->
-
 					</div>
 
 				<!-- Contact -->
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action="#">
+								<form method="post" action="https://getform.io/f/d340529a-3cf0-4153-84c3-b6d74be59794">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -196,11 +128,8 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<!-- <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li> -->
-								<!-- <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li> -->
-								<!-- <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li> -->
-								<li><a href="https://www.github.com/joeya20" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="https://www.linkedin.com/in/joeyah-kiow" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.github.com/joeya20" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/joeyah-kiow" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Joey Ah-kiow</li>
