updated About and Project pages

--- a/projects.html
+++ b/projects.html
@@ -47,61 +47,83 @@
 								<h1>Projects</h1>
 							</header>
 							<div class="content">
-								<p>Lorem ipsum dolor sit amet nullam consequat<br />
-								sed veroeros. tempus adipiscing nulla.</p>
+								<p>Cool stuff I've done</p>
 							</div>
 						</div>
 					</section>
 
 				<!-- Main -->
 					<div id="main">
-
 						<!-- Two -->
 							<section id="two" class="spotlights">
+								
+								<!-- Project 1 -->
 								<section>
-									<a href="generic.html" class="image">
-										<img src="images/pic08.jpg" alt="" data-position="center center" />
-									</a>
+									<span class="image">
+										<img src="images/01_PIC_multimeter.png" alt="" data-position="center center"/>
+									</span>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Orci maecenas</h3>
+												<h3>PIC-based digital multimeter</h3>
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="https://github.com/joeya20/ENCM511/tree/main/AppProject2.X" class="button" target="_blank">Go to GitHub</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
+
+								<!-- Project 2 -->
 								<section>
-									<a href="generic.html" class="image">
-										<img src="images/pic09.jpg" alt="" data-position="top center" />
-									</a>
+									<span class="image">
+										<img src="images/02_FPGA_proximity_buzzer.png" alt="" data-position="center center"/>
+									</span>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Rhoncus magna</h3>
+												<h3>Proximity-controlled buzzer, LEDs, and 7 segment displays</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>This FPGA project utilized the Terasic DE-10 Lite FPGA development board, a proximity sensor, and a buzzer. The project used the readings of the proximity sensor to control the frequency of the buzzer and the brightness of the LEDs, the value of the readings was also displayed with onboard seven segment displays.</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="https://github.com/joeya20/ENEL453/tree/main/ENEL%20453%20Lab%204" class="button" target="_blank">Go to GitHub</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
+
+								<!-- Project 3 -->
 								<section>
-									<a href="generic.html" class="image">
-										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
-									</a>
+									<span class="image">
+										<img src="images/03_REJOY.png" alt="" data-position="center center" />
+									</span>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Sed nunc ligula</h3>
+												<h3>REJOY Fitness Tracker</h3>
+											</header>
+											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<!-- <ul class="actions">
+												<li><a href="generic.html" class="button">Learn more</a></li>
+											</ul> -->
+										</div>
+									</div>
+								</section>
+								
+								<!-- Project 4 -->
+								<section>
+									<span class="image">
+										<img src="images/pic01.jpg" alt="" data-position="center center" />
+									</span>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3>Switch-Controlled LED Blinker</h3>
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="https://github.com/joeya20/FPGA-LED-blinker" class="button" target="_blank">Go to GitHub</a></li>
 											</ul>
 										</div>
 									</div>
@@ -109,15 +131,15 @@
 							</section>
 
 						<!-- Three -->
-							<section id="three">
+							<section>
 								<div class="inner">
 									<header class="major">
-										<h2>Massa libero</h2>
+										<h2>More coming...</h2>
 									</header>
 									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button next">Get Started</a></li>
-									</ul>
+									<!-- <ul class="actions">
+										<li><a href="generic.html" class="button">Learn more</a></li>
+									</ul> -->
 								</div>
 							</section>
 
