--- a/about.html
+++ b/about.html
@@ -44,12 +44,19 @@
 									<header class="major">
 										<h1>About Me</h1>
 									</header>
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+									<p><span class="image left"><img src="./images/01_headshot.jpg" alt="" /></span>I am an Electrical and Computer Engineering student at the University of Calgary. I am currently completing a 16 month co-op as the Field Data Program Management intern at TC Energy, an Oil and Gas midstream company based in Calgary, Canada. On the side, I am continuing to develop my digital design skills and have begun learning verilog using textbooks, nandland. I am also learning computer architecture principles using textbooks to better understand design practices, considerations and tradeoffs.</p>
+
+									<p>I will finish my co-op and begin the final year of my BSc. in September 2022 and graduate in May 2023. Afterwards, I plan on pursuing an MSc. in Electrical Engineering, focusing in an area of hardware design, and I am currently searching for a good fit in programs in Canada and abroad. After I graduate, my goal is to work in an ASIC/SoC design position and find innovative solutions to challenging problems.</p>
+
+									<p>To take a closer look at my profile, please download my resume and transcript below. Feel free to contact me if you have any questions, resource/project recommendations or just want to connect!</p>
+									<!-- <p>If you have any </p> -->
+									
+									<!-- <p>My coursework up to now has been centered around learning the foundations of digital and analog electronic circuits, writing efficient and maintable code, learning the basics of digital system design and HDLs using VHDL, and more foundational electrical engineering knowledge. To further develop my hardware knowledge, in my last year of school I plan on taking courses such as ENCM 501 - Principles of Computer Architecture and ENCM 515 - Digital Signal Processors.</p> -->
+
+									<!-- <p>Through my past experience, I have gained </p> -->
 									<ul class="actions">
 										<li><a href="./resume.pdf" class="button icon solid fa-download" download>Download my resume</a></li>
+										<li><a href="./transcript.pdf" class="button icon solid fa-download" download>Download my transcript</a></li>
 									</ul>
 								</div>
 							</section>
