--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="projects.html" class="link">Projects</a></h3>
-										<p>Cool stuff I do</p>
+										<p>Cool stuff I've done</p>
 									</header>
 								</article>								
 							</section>
@@ -102,7 +102,7 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="mailto:joeyah20@gmail.com">joeyah20@gmail.com</a>
+										<a href="mailto:joey.ahkiow@gmail.com">joey.ahkiow@gmail.com</a>
 									</div>
 								</section>
 								<section>
