Finished Projects page

--- a/about.html
+++ b/about.html
@@ -44,16 +44,20 @@
 									<header class="major">
 										<h1>About Me</h1>
 									</header>
-									<p><span class="image left"><img src="./images/01_headshot.jpg" alt="" /></span>I am an Electrical and Computer Engineering student at the University of Calgary. I am currently completing a 16 month co-op as the Field Data Program Management intern at TC Energy, an Oil and Gas midstream company based in Calgary, Canada. On the side, I am continuing to develop my digital design skills and have begun learning verilog using textbooks, nandland. I am also learning computer architecture principles using textbooks to better understand design practices, considerations and tradeoffs.</p>
 
-									<p>I will finish my co-op and begin the final year of my BSc. in September 2022 and graduate in May 2023. Afterwards, I plan on pursuing an MSc. in Electrical Engineering, focusing in an area of hardware design, and I am currently searching for a good fit in programs in Canada and abroad. After I graduate, my goal is to work in an ASIC/SoC design position and find innovative solutions to challenging problems.</p>
+									<h3>Profile</h3>									
+									<p>
+									<!-- <span class="image left"><img src="./images/01_headshot.jpg" alt="" /></span><br>	 -->
+									I am an Electrical and Computer Engineering student at the University of Calgary. I am currently completing a 16 month co-op as the Field Data Program Management intern at TC Energy, an Oil and Gas midstream company based in Calgary, Canada. I will finish my co-op and begin the final year of my BSc. in September 2022 and graduate in May 2023. Afterwards, I plan on pursuing an MSc. in Electrical Engineering and I am currently searching for a good fit in programs in Canada and abroad. My potential research interests include computer architecture, hardware design for ML/AI accelerators, or applications of ML/AI in digital hardware design.</p>
 
-									<p>To take a closer look at my profile, please download my resume and transcript below. Feel free to contact me if you have any questions, resource/project recommendations or just want to connect!</p>
-									<!-- <p>If you have any </p> -->
-									
-									<!-- <p>My coursework up to now has been centered around learning the foundations of digital and analog electronic circuits, writing efficient and maintable code, learning the basics of digital system design and HDLs using VHDL, and more foundational electrical engineering knowledge. To further develop my hardware knowledge, in my last year of school I plan on taking courses such as ENCM 501 - Principles of Computer Architecture and ENCM 515 - Digital Signal Processors.</p> -->
+									<h3>Education</h3>
+									<p>My coursework up to now has been centered around learning the foundations of Electrical and Computer Engineering: digital and analog electronic circuits, writing efficient and maintable code, learning the basics of digital system design and HDLs, and computer organization. In my last year of school, to further develop my design knowledge, I plan on taking courses like ENCM 501 - Principles of Computer Architecture, ENCM 515 - Digital Signal Processors, and ENCM 517 - Computer Arithmetic and Computational Complexity.</p>
 
-									<!-- <p>Through my past experience, I have gained </p> -->
+									<h3>Personal Initiatives</h3>
+									<p>I am continuing to develop my digital design skills and have begun learning verilog and digital design fundamentals using textbooks, nandland, asic-world and Intel Learning. I am planning on completing a few projects using Verilog so keep an eye out on my <a href="./projects.html">projects</a> page! I am also learning computer architecture principles using 'Digital Design and Computer Architecture' by Harris and Harris to better understand current computer system hardware design practices, considerations and tradeoffs. My goal by the end of my internship is to have built knowledge on top of what I have learned in school and begin applying for MSc. programs.</p>
+
+									<p>To take a closer look at my profile, please download my resume and transcript below. Feel free to contact me if you have any questions, resource/project recommendations or just want to connect!</p>									
+
 									<ul class="actions">
 										<li><a href="./resume.pdf" class="button icon solid fa-download" download>Download my resume</a></li>
 										<li><a href="./transcript.pdf" class="button icon solid fa-download" download>Download my transcript</a></li>
