--- a/projects.html
+++ b/projects.html
@@ -65,29 +65,11 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>PIC-based digital multimeter</h3>
+												<h3>Course Project: PIC-based digital multimeter</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>This project is a PIC16 based multimeter that can measure DC voltage and resistance. It reads an input voltage using an ADC and outputs a voltage/resistance out to a teraterm window using a UART module. The voltage it can read is constrained by the power rails(0-3.3V) and the upper limit of the resistance it can read was determined experimentally and is most likely due to a combination of low rail voltage and lack of precision. The system switches between three states: Idle, Voltmeter, and Ohmmeter, and it was programmed to be as power efficient as possible. </p>
 											<ul class="actions">
 												<li><a href="https://github.com/joeya20/ENCM511/tree/main/AppProject2.X" class="button" target="_blank">Go to GitHub</a></li>
-											</ul>
-										</div>
-									</div>
-								</section>
-
-								<!-- Project 2 -->
-								<section>
-									<span class="image">
-										<img src="images/02_FPGA_proximity_buzzer.png" alt="" data-position="center center"/>
-									</span>
-									<div class="content">
-										<div class="inner">
-											<header class="major">
-												<h3>Proximity-controlled buzzer, LEDs, and 7 segment displays</h3>
-											</header>
-											<p>This FPGA project utilized the Terasic DE-10 Lite FPGA development board, a proximity sensor, and a buzzer. The project used the readings of the proximity sensor to control the frequency of the buzzer and the brightness of the LEDs, the value of the readings was also displayed with onboard seven segment displays.</p>
-											<ul class="actions">
-												<li><a href="https://github.com/joeya20/ENEL453/tree/main/ENEL%20453%20Lab%204" class="button" target="_blank">Go to GitHub</a></li>
 											</ul>
 										</div>
 									</div>
@@ -101,42 +83,79 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>REJOY Fitness Tracker</h3>
+												<h3>Course Project: REJOY Fitness Tracker</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
-											<!-- <ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
-											</ul> -->
+											<p>This project is an Arduino-based wearable fitness tracker and was completed during the Winter 2021 Semester. The device is a fully functional wearable fitness tracker that measures and stores data like heart rate and blood oxygen level using an off the shelf sensor, and steps taken using the accelerometer and an algorithm to convert movement to steps. It also integrated other components like an OLED display, a Real Time Clock (RTC), a rotary encoder, an SD card module, a BLE module, and a 5V regulated power supply consisting of a LiPo battery and a charger board.</p>
+											
+											<p>The OLED and rotary encoder served as the device UI, displaying data and time, and switching between modes. The data readings were stored locally on the device using the SD card module and could connect to another device using Bluetooth to display the data using a web-based UI for meaningful data visualizations and trends. The Design Specification is available for more detailed information!</p>
+											<ul class="actions">
+												<li><a href="./REJOY_Design Specification.pdf" class="button icon solid fa-download" download>Download Design Spec</a></li>
+											</ul>
 										</div>
 									</div>
-								</section>
-								
-								<!-- Project 4 -->
+								</section>			
+
+								<!-- Project 2 -->
 								<section>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" data-position="center center" />
+										<img src="images/02_FPGA_proximity_buzzer.png" alt="" data-position="center center"/>
 									</span>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Switch-Controlled LED Blinker</h3>
+												<h3>Course Project: Proximity-controlled buzzer, LEDs, and 7 segment displays</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>This FPGA project utilized the Terasic DE10-Lite FPGA development board, a proximity sensor, and two pushbuttons as input and a buzzer, 4 7-segment displays and 10 LEDs as output. </p>
+											<p>An ADC was used to read the proximity sensor output and  controlled the frequency of the buzzer and the brightness of the LEDs using PWM. The value read from the sensor was also displayed on the 7-segment displays, as either voltage or distance values. The voltage value obtained from the sensor was converted to a distance value using a LUT  obtained using curve fitting.</p>
 											<ul class="actions">
-												<li><a href="https://github.com/joeya20/FPGA-LED-blinker" class="button" target="_blank">Go to GitHub</a></li>
+												<li><a href="https://github.com/joeya20/ENEL453/tree/main/ENEL%20453%20Lab%204" class="button" target="_blank">Go to GitHub</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>				
+
+								<section>
+									<span class="image">
+										<img src="images/Screenshot 2022-01-14 203506.png" alt="" data-position="center center" />
+									</span>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3>Personal Project: Switch-Controlled LED Blinker</h3>
+											</header>
+											<p>This is the first project I completed using Verilog. The project utilizes the Terasic DE10-Lite FPGA Development board. Three switches are used as inputs to turn on the LEDs and select a frequency (1 Hz, 5Hz, 10Hz, 20Hz) at a duty cycle of 50%.</p>
+											<ul class="actions">
+												<li><a href="https://github.com/joeya20/FPGA-switch-to-sev-seg" class="button" target="_blank">Go to GitHub</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
+
+								<!-- Project 5 -->
+								<section>
+									<span class="image">
+										<img src="images/04_Decimal_Hex_sev_seg.jpg" alt="" data-position="center center" />
+									</span>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3>Personal Project: Decimal and Hex 7-segment display</h3>
+											</header>
+											<p>This is the second project I've completed using Verilog and the DE10-Lite board. This project uses nine switches as inputs - one switch to toggle between hex and decimal output, and the rest as an 8-bit number. The value of the input is displayed on the 7-segment displays in hexadecimal(0-FF) or decimal(0-255).</p>
+											<ul class="actions">
+												<li><a href="https://github.com/joeya20/FPGA-switch-to-sev-seg" class="button" target="_blank">Go to GitHub</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 							</section>
 
-						<!-- Three -->
 							<section>
 								<div class="inner">
 									<header class="major">
 										<h2>More coming...</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
+									<p>I am continuing to work on exciting projects so keep an eye out for new additions. My next project is a single cycle MIPS Processor implemented using Verilog.</p>
 									<!-- <ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul> -->
