--- a/projects.html
+++ b/projects.html
@@ -89,7 +89,7 @@
 											
 											<p>The OLED and rotary encoder served as the device UI, displaying data and time, and switching between modes. The data readings were stored locally on the device using the SD card module and could connect to another device using Bluetooth to display the data using a web-based UI for meaningful data visualizations and trends. The Design Specification is available for more detailed information!</p>
 											<ul class="actions">
-												<li><a href="./REJOY_Design Specification.pdf" class="button icon solid fa-download" download>Download Design Spec</a></li>
+												<li><a href="./REJOY_Design_Specification.pdf" class="button icon solid fa-download" download>Download Design Spec</a></li>
 											</ul>
 										</div>
 									</div>
@@ -116,7 +116,7 @@
 
 								<section>
 									<span class="image">
-										<img src="images/Screenshot 2022-01-14 203506.png" alt="" data-position="center center" />
+										<img src="images/04_LED_blinker_RTL.png" alt="" data-position="center center" />
 									</span>
 									<div class="content">
 										<div class="inner">
@@ -134,7 +134,7 @@
 								<!-- Project 5 -->
 								<section>
 									<span class="image">
-										<img src="images/04_Decimal_Hex_sev_seg.jpg" alt="" data-position="center center" />
+										<img src="images/05_Decimal_Hex_sev_seg.jpg" alt="" data-position="center center" />
 									</span>
 									<div class="content">
 										<div class="inner">
