--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 									<h3>Personal Initiatives</h3>
 									<p>I am continuing to develop my digital design skills and have begun learning verilog and digital design fundamentals using textbooks, nandland, asic-world and Intel Learning. I am planning on completing a few projects using Verilog so keep an eye out on my <a href="./projects.html">projects</a> page! I am also learning computer architecture principles using 'Digital Design and Computer Architecture' by Harris and Harris to better understand current computer system hardware design practices, considerations and tradeoffs. My goal by the end of my internship is to have built knowledge on top of what I have learned in school and begin applying for MSc. programs.</p>
 
-									<p>To take a closer look at my profile, please download my resume and transcript below. Feel free to contact me if you have any questions, resource/project recommendations or just want to connect!</p>									
+									<p>Please contact me if you have any questions, resource/project recommendations or just want to connect!</p>									
 
 									<ul class="actions">
 										<li><a href="./resume.pdf" class="button icon solid fa-download" download>Download my resume</a></li>
