--- a/projects.html
+++ b/projects.html
@@ -106,7 +106,7 @@
 												<h3>Course Project: Proximity-controlled buzzer, LEDs, and 7 segment displays</h3>
 											</header>
 											<p>This FPGA project utilized the Terasic DE10-Lite FPGA development board, a proximity sensor, and two pushbuttons as input and a buzzer, 4 7-segment displays, and 10 LEDs as output. </p>
-											<p>An ADC was used to read the proximity sensor output to control the frequency of the buzzer and the brightness of the LEDs using PWM. The value read from the sensor was also displayed on the 7-segment displays, as either a voltage or distance value. The voltage value received from the sensor was converted to a distance value using a LUT obtained using experimental values and curve fitting.</p>
+											<p>An ADC was used to read the proximity sensor output and was converted to a distance value using a LUT obtained using experimental values and curve fitting. The value read from the sensor was also displayed on the 7-segment displays, as either a voltage or distance value, and used to control the frequency of the buzzer and the brightness of the LEDs using PWM.</p>
 											<ul class="actions">
 												<li><a href="https://github.com/joeya20/ENEL453/tree/main/ENEL%20453%20Lab%204" class="button" target="_blank">Go to GitHub</a></li>
 											</ul>
