Update About and Projects page

--- a/about.html
+++ b/about.html
@@ -48,15 +48,23 @@
 									<h3>Profile</h3>									
 									<p>
 									<!-- <span class="image left"><img src="./images/01_headshot.jpg" alt="" /></span><br>	 -->
-									I am an Electrical and Computer Engineering student at the University of Calgary. I am currently completing a 16 month co-op as the Field Data Program Management intern at TC Energy, an Oil and Gas midstream company based in Calgary, Canada. I will finish my co-op and begin the final year of my BSc. in September 2022 and graduate in May 2023. Afterwards, I plan on pursuing an MSc. in Electrical Engineering and I am currently searching for a good fit in programs in Canada and abroad. My potential research interests mainly revolve around computer hardware design such as computer architecture and microarchitecture, hardware design for ML/AI accelerators, and applications of ML/AI in hardware design.</p>
+									I am an Electrical and Computer Engineering student at the University of Calgary. I am currently completing a 16 month co-op as the Field Data Program Management intern at TC Energy, an Oil and Gas midstream company based in Calgary, Canada. I will finish my co-op and begin the final year of my BSc. in September 2022 and graduate in May 2023. Afterwards, I plan on pursuing an MSc. in Electrical Engineering and I am currently searching for a good fit in programs in Canada and abroad. My potential research interests mainly revolve around digital hardware design, computer architecture and microarchitecture, and hardware design for ML/AI accelerators.</p>
 
 									<h3>Education</h3>
 									<p>My coursework up to now has been centered around learning the foundations of Electrical and Computer Engineering: digital and analog electronic circuits, writing efficient and maintable code, learning the basics of digital system design and HDLs, and computer organization. In my last year of school, to further develop my design knowledge, I plan on taking courses like ENCM 501 - Principles of Computer Architecture, ENCM 515 - Digital Signal Processors, and ENCM 517 - Computer Arithmetic and Computational Complexity.</p>
 
 									<h3>Personal Initiatives</h3>
-									<p>I am continuing to develop my digital design skills and have begun learning Verilog and using textbooks, nandland, asic-world and Intel Learning. I am planning on completing a few projects using Verilog so keep an eye out on my <a href="./projects.html">projects</a> page! I am also learning computer architecture principles using "Digital Design and Computer Architecture" by Harris and Harris to better understand digital design and computer architecture practices, considerations and tradeoffs. My goal by the end of my internship is to have built knowledge on top of what I have learned in school and begin applying for MSc. programs.</p>
+									<p>I am continuing to develop my digital design skills using Verilog and I am planning on completing a few projects so keep an eye out on my <a href="./projects.html">projects</a> page! I am also learning computer architecture principles using various textbooks listed below to better understand design practices, considerations and tradeoffs. My goal by the end of my internship is to have built knowledge on top of what I have learned in school and begin applying for MSc. programs.</p>
 
-									<p>Please contact me if you have any questions, resource/project recommendations or just want to connect!</p>									
+									<h3>Textbooks Read</h3>
+									<ul>
+										<li>Digital Design and Computer Architecture by Harris, and Harris</li>
+										<li>Computer Architecture: A Quantitative Approach by Hennessy, and Patterson</li>
+										<li>Computer Organization and Design: The Hardware/Software Interface by Hennessy, and Patterson</li>
+										<li>Efficient Processing of Deep Neural Networks by Sze, Chen, Yang, and Emer</li>
+									</ul>
+
+									<p>Please contact me if you have any questions, book/project recommendations, or just want to connect/chat!</p>									
 
 									<ul class="actions">
 										<li><a href="./resume.pdf" class="button icon solid fa-download" download>Download my resume</a></li>
