--- a/projects.html
+++ b/projects.html
@@ -67,7 +67,7 @@
 											<header class="major">
 												<h3>Course Project: PIC-based digital multimeter</h3>
 											</header>
-											<p>This project is a PIC16 based multimeter that can measure DC voltage and resistance. It reads an input voltage using an ADC and outputs a voltage/resistance out to a teraterm window using a UART module. The voltage it can read is constrained by the power rails(0-3.3V) and the upper limit of the resistance it can read was determined experimentally and is most likely due to a combination of low rail voltage and lack of precision. The system switches between three states: Idle, Voltmeter, and Ohmmeter, and it was programmed to be as power efficient as possible. </p>
+											<p>This project is a PIC16 based multimeter that can measure DC voltage and resistance. It reads an input voltage using an ADC and outputs a voltage/resistance value to a TeraTerm window using a UART module. The voltage it can read is constrained by the power rails(0-3.3V) and the upper limit of the resistance it can read was determined experimentally and is most likely due to a combination of low supply voltage and lack of precision. The system switches between three states: Idle, Voltmeter, and Ohmmeter, and was programmed to be as power efficient as possible through the use of interrupts and proper clock management. </p>
 											<ul class="actions">
 												<li><a href="https://github.com/joeya20/ENCM511/tree/main/AppProject2.X" class="button" target="_blank">Go to GitHub</a></li>
 											</ul>
@@ -75,7 +75,7 @@
 									</div>
 								</section>
 
-								<!-- Project 3 -->
+								<!-- Project 2 -->
 								<section>
 									<span class="image">
 										<img src="images/03_REJOY.png" alt="" data-position="center center" />
@@ -95,7 +95,7 @@
 									</div>
 								</section>			
 
-								<!-- Project 2 -->
+								<!-- Project 3 -->
 								<section>
 									<span class="image">
 										<img src="images/02_FPGA_proximity_buzzer.png" alt="" data-position="center center"/>
@@ -114,6 +114,7 @@
 									</div>
 								</section>				
 
+								<!-- Project 4 -->
 								<section>
 									<span class="image">
 										<img src="images/04_LED_blinker_RTL.png" alt="" data-position="center center" />
@@ -155,7 +156,7 @@
 									<header class="major">
 										<h2>More coming...</h2>
 									</header>
-									<p>I am continuing to work on exciting projects so keep an eye out for new additions. My next project is a single cycle MIPS Processor implemented using Verilog.</p>
+									<p>I am continuing to work on exciting projects so keep an eye out for new additions.</p>
 									<!-- <ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul> -->
