--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							</header>
 							<div class="content">
 								<p>electrical and computer engineering student<br>
-								Technology and Electronics Enthusiast</p>
+								Computer and Electronics Enthusiast</p>
 								<ul class="actions">
 									<li><a href="#main" class="button next scrolly">Get Started</a></li>
 								</ul>
