--- a/about.html
+++ b/about.html
@@ -60,8 +60,8 @@
 									<ul>
 										<li>Digital Design and Computer Architecture by Harris, and Harris</li>
 										<li>Computer Architecture: A Quantitative Approach by Hennessy, and Patterson</li>
-										<li>Computer Organization and Design: The Hardware Software Interface by Hennessy, and Patterson</li>
-										<li>Efficient Processing of Deep Neural Networks by Sze, Chen, Yang, and Emer</li>
+										<!-- <li>Efficient Processing of Deep Neural Networks by Sze, Chen, Yang, and Emer</li> -->
+										<!-- <li>Computer Organization and Design: The Hardware Software Interface by Hennessy, and Patterson</li> -->
 									</ul>
 
 									<p>Please contact me if you have any questions, book/project recommendations, or just want to connect/chat!</p>									
