--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 									<p>My coursework up to now has been centered around learning the foundations of Electrical and Computer Engineering: digital and analog electronic circuits, writing efficient and maintable code, learning the basics of digital system design and HDLs, and computer organization. In my last year of school, to further develop my design knowledge, I plan on taking courses like ENCM 501 - Principles of Computer Architecture, ENCM 515 - Digital Signal Processors, and ENCM 517 - Computer Arithmetic and Computational Complexity, and if possible, also complete an undergraduate research project under the supervision of a faculty member.</p>
 
 									<h3>Personal Initiatives</h3>
-									<p>I am continuing to develop my digital design skills using Verilog and I am planning on completing a few projects so keep an eye out on my <a href="./projects.html">projects</a> page! I am also learning computer architecture principles using various textbooks listed below to better understand design practices, considerations and tradeoffs. My goal by the end of my internship is to have a solid background in digital design, and computer architecture, and begin applying for MSc. programs.</p>
+									<p>I am continuing to develop my digital design skills using Verilog and I am planning on completing a few projects so keep an eye out on my <a href="./projects.html">projects</a> page! I am also learning computer architecture principles using various textbooks listed below to better understand design practices, considerations and tradeoffs. My goal at the end of my internship is to have a solid background in digital design, and computer architecture, and begin applying for MSc. programs.</p>
 
 									<h3>Textbooks Read</h3>
 									<ul>
