Updated resume and transcript

--- a/about.html
+++ b/about.html
@@ -67,8 +67,8 @@
 									<p>Please contact me if you have any questions, book/project recommendations, or just want to connect/chat!</p>									
 
 									<ul class="actions">
-										<li><a href="./resume.pdf" class="button icon solid fa-download" download>Download my resume</a></li>
-										<li><a href="./transcript.pdf" class="button icon solid fa-download" download>Download my transcript</a></li>
+										<li><a href="./Joey_Ah-kiow_Resume.pdf" class="button icon solid fa-download" download>Download my resume</a></li>
+										<li><a href="./Joey_Ah-kiow_Transcript.pdf" class="button icon solid fa-download" download>Download my transcript</a></li>
 									</ul>									
 								</div>
 							</section>
