--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
 									<h3>Textbooks Read</h3>
 									<ul>
 										<li>Digital Design and Computer Architecture by Harris, and Harris</li>
-										<li>Computer Architecture: A Quantitative Approach by Hennessy, and Patterson</li>
+										<li>Computer Architecture: A Quantitative Approach by Hennessy, and Patterson (In progress)</li>
 										<!-- <li>Efficient Processing of Deep Neural Networks by Sze, Chen, Yang, and Emer</li> -->
 										<!-- <li>Computer Organization and Design: The Hardware Software Interface by Hennessy, and Patterson</li> -->
 									</ul>
