--- a/projects.html
+++ b/projects.html
@@ -112,10 +112,28 @@
 											</ul>
 										</div>
 									</div>
-								</section>				
+								</section>		
+
+								<!-- Project 6 -->
+								<section>
+									<span class="image">
+										<img src="images/06_countdown_timer.gif" alt="" data-position="center center"/>
+									</span>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3>Personal Project: Countdown Timer</h3>
+											</header>
+											<p>This is the first project I've completed using SystemVerilog and the DE10-Lite board, and also the first FSM I've implemented on an FPGA. This project uses 2 pushbuttons and 1 switch as inputs - the switch is used as a reset, and the 2 pushbuttons are used as a start/stop and to increment the timer. The current value of the timer is displayed on 4 7-segment displays, 2 for minutes and 2 for seconds. When the end of the timer is reached, an array of LEDs blinks every 0.5ms.</p>
+											<ul class="actions">
+												<li><a href="https://github.com/joeya20/FPGA-countdown-timer" class="button" target="_blank">Go to GitHub</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>		
 
 								<!-- Project 4 -->
-								<section>
+								<!-- <section>
 									<span class="image">
 										<img src="images/04_LED_blinker_RTL.png" alt="" data-position="center center" />
 									</span>
@@ -130,10 +148,10 @@
 											</ul>
 										</div>
 									</div>
-								</section>
+								</section> -->
 
 								<!-- Project 5 -->
-								<section>
+								<!-- <section>
 									<span class="image">
 										<img src="images/05_Decimal_Hex_sev_seg.jpg" alt="" data-position="center center" />
 									</span>
@@ -148,15 +166,15 @@
 											</ul>
 										</div>
 									</div>
-								</section>
-							</section>
-
+								</section> -->
+						</section>
+						
 							<section>
 								<div class="inner">
 									<header class="major">
 										<h2>More coming...</h2>
 									</header>
-									<p>I am continuing to work on exciting projects so keep an eye out for new additions.</p>
+									<p>I am continuing to work on cool projects, so keep an eye out for new additions!</p>
 									<!-- <ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul> -->
