--- a/projects.html
+++ b/projects.html
@@ -105,7 +105,7 @@
 											<header class="major">
 												<h3>Course Project: Proximity-controlled buzzer, LEDs, and 7 segment displays</h3>
 											</header>
-											<p>This FPGA project utilized the Terasic DE10-Lite FPGA development board, a proximity sensor, and two pushbuttons as input and a buzzer, 4 7-segment displays, and 10 LEDs as output. </p>
+											<p>This FPGA project utilized an infared proximity sensor and two pushbuttons as inputs, and a buzzer, four 7-segment displays, and an LED array as outputs. </p>
 											<p>An ADC was used to read the proximity sensor output and was converted to a distance value using a LUT obtained using experimental values and curve fitting. The value read from the sensor was also displayed on the 7-segment displays, as either a voltage or distance value, and used to control the frequency of the buzzer and the brightness of the LEDs using PWM.</p>
 											<ul class="actions">
 												<li><a href="https://github.com/joeya20/ENEL453/tree/main/ENEL%20453%20Lab%204" class="button" target="_blank">Go to GitHub</a></li>
@@ -124,7 +124,7 @@
 											<header class="major">
 												<h3>Personal Project: Countdown Timer</h3>
 											</header>
-											<p>This is the first project I've completed using SystemVerilog and the DE10-Lite board, and also the first FSM I've implemented on an FPGA. This project uses 2 pushbuttons and 1 switch as inputs - the switch is used as a reset, and the 2 pushbuttons are used as a start/stop and to increment the timer. The current value of the timer is displayed on 4 7-segment displays, 2 for minutes and 2 for seconds. When the end of the timer is reached, an array of LEDs blinks every 0.5ms.</p>
+											<p>This is the first project I've completed using SystemVerilog, and the first FSM I've implemented using a HDL/on an FPGA. This project uses two pushbuttons and one switch as inputs - the switch is used as a reset, and the two pushbuttons are used as a start/stop and to increment the timer. The current value of the timer is displayed on four 7-segment displays, two for minutes (0-99) and two for seconds (0-59). When the end of the timer is reached, an array of LEDs blinks at a 1 Hz frequency and 50% duty cycle.</p>
 											<ul class="actions">
 												<li><a href="https://github.com/joeya20/FPGA-countdown-timer" class="button" target="_blank">Go to GitHub</a></li>
 											</ul>
