--- a/projects.html
+++ b/projects.html
@@ -105,14 +105,14 @@
 											<header class="major">
 												<h3>Course Project: Proximity-controlled buzzer, LEDs, and 7 segment displays</h3>
 											</header>
-											<p>This FPGA project utilized an infared proximity sensor and two pushbuttons as inputs, and a buzzer, four 7-segment displays, and an LED array as outputs. </p>
+											<p>This FPGA project utilized an infared proximity sensor, two switches and two pushbuttons as inputs, and a buzzer, four 7-segment displays and an LED array as outputs. </p>
 											<p>An ADC was used to read the proximity sensor output and was converted to a distance value using a LUT obtained using experimental values and curve fitting. The value read from the sensor was also displayed on the 7-segment displays, as either a voltage or distance value, and used to control the frequency of the buzzer and the brightness of the LEDs using PWM.</p>
 											<ul class="actions">
 												<li><a href="https://github.com/joeya20/ENEL453/tree/main/ENEL%20453%20Lab%204" class="button" target="_blank">Go to GitHub</a></li>
 											</ul>
 										</div>
 									</div>
-								</section>		
+								</section>
 
 								<!-- Project 6 -->
 								<section>
