--- a/index.html
+++ b/index.html
@@ -1,148 +1,150 @@
 <!DOCTYPE HTML>
+<!--
+	Editorial by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 	<head>
-		<title>Joey Ah-kiow | Home</title>
+		<title>Joey Ah-kiow's Website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
 		<!-- Wrapper -->
 			<div id="wrapper">
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Joey</strong> <span>Ah-kiow</span></a>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
-					</header>
-
-				<!-- Menu -->
-					<nav id="menu">
-						<ul class="links">
-							<li><a href="./index.html">Home</a></li>
-							<li><a href="./about.html">About Me</a></li>
-							<li><a href="./projects.html">Projects</a></li>
-							<li><a href="./index.html#contact">Contact</a></li>
-						</ul>
-					</nav>
-
-				<!-- Banner -->
-					<section id="banner" class="major">
-						<div class="inner">
-							<header class="major">
-								<h1>Hi, I'm Joey!</h1>
-							</header>
-							<div class="content">
-								<p>electrical and computer engineering student<br>
-								Computer and Electronics Enthusiast</p>
-								<ul class="actions">
-									<li><a href="#main" class="button next scrolly">Get Started</a></li>
-								</ul>
-							</div>
-						</div>
-					</section>
-
 				<!-- Main -->
 					<div id="main">
+						<div class="inner">
 
-						<!-- Overview -->
-							<section id="overview" class="tiles">
-								<article>
-									<span class="image">
-										<img src="./images/02_about-background.jpg" alt="" />
-									</span>
+							<!-- Header -->
+								<header id="header">
+									<a href="index.html" class="logo"><strong>Joey</strong> Ah-kiow</a>
+									<ul class="icons">
+										<li><a href="https://www.github.com/joeya20" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+										<li><a href="https://www.linkedin.com/in/joeyah-kiow" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
+										<!-- <li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
+										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li> -->
+									</ul>
+								</header>
+
+							<!-- Banner -->
+								<section id="banner">
+									<div class="content">
+										<header>
+											<h1>Hi, I’m Joey</h1>
+											<p>Electrical and Computer Engineering Student</p>
+										</header>
+										<p>I am an Electrical and Computer Engineering student at the University of Calgary, and I am currently completing a 16 month co-op at TC Energy, an Oil and Gas midstream company based in Calgary, Canada. I will finish my co-op and begin the final year of my BSc. in September 2022 and graduate in May 2023. Afterwards, I plan on pursuing graduate studies in Electrical and Computer Engineering. My potential research interests mainly revolve around computer architecture and embedded systems.</p>
+										<p>Please contact me if you have any questions, book/project recommendations, or just want to connect/chat!</p>									
+										<ul class="actions">
+											<li><a href="./Joey_Ah-kiow_Resume.pdf" class="button icon solid fa-download" download>Download my resume</a></li>
+											<li><a href="./Joey_Ah-kiow_Transcript.pdf" class="button icon solid fa-download" download>Download my transcript</a></li>
+										</ul>									
+									</div>
+									<!-- <span class="image object">
+										<img src="images/pic10.jpg" alt="" />
+									</span> -->
+								</section>
+
+							<!-- Section -->
+								<section id="projects">
 									<header class="major">
-										<h3><a href="./about.html" class="link">About Me</a></h3>
-										<p>Get to know me</p>
+										<h2>Projects</h2>
 									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="./images/03_projects-background.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="projects.html" class="link">Projects</a></h3>
-										<p>Cool stuff I've done</p>
-									</header>
-								</article>								
-							</section>
+									<div class="posts">
+										<article>
+											<span class="image fit"><img src="images/01_PIC_multimeter.png" alt="" /></span>
+											<h3>PIC-based digital multimeter</h3>
+											<p>This project is a PIC16 based multimeter that can measure DC voltage and resistance. It reads an input voltage using an ADC and outputs a voltage/resistance value to a TeraTerm window using a UART module. The voltage it can read is constrained by the power rails(0-3.3V) and the upper limit of the resistance it can read was determined experimentally and is most likely due to a combination of low supply voltage and lack of precision. The system switches between three states: Idle, Voltmeter, and Ohmmeter, and was programmed to be as power efficient as possible through the use of interrupts and proper clock management.</p>
+											<ul class="actions">
+												<li><a href="https://github.com/joeya20/ENCM511/tree/main/AppProject2.X" class="button" target="_blank">GitHub</a></li>
+											</ul>
+										</article>
+										<article>
+											<span class="image fit"><img src="images/03_REJOY.png" alt="" /></span>
+											<h3>REJOY Fitness Tracker</h3>
+											<p>This project is an Arduino-based wearable fitness tracker and was completed during the Winter 2021 Semester. The device is a fully functional wearable fitness tracker that measures and stores data like heart rate and blood oxygen level using an off the shelf sensor, and steps taken using the accelerometer and an algorithm to convert movement to steps. It also integrated other components like an OLED display, a Real Time Clock (RTC), a rotary encoder, an SD card module, a BLE module, and a 5V regulated power supply consisting of a LiPo battery and a charger board.</p>
+											
+											<p>The OLED and rotary encoder served as the device UI, displaying data and time, and switching between modes. The data readings were stored locally on the device using the SD card module and could connect to another device using Bluetooth to display the data using a web-based UI for meaningful data visualizations and trends. The Design Specification is available for more detailed information!</p>
+											<ul class="actions">
+												<li><a href="./REJOY_Design_Specification.pdf" class="button icon solid fa-download" download>Download Design Spec</a></li>
+											</ul>
+										</article>
+										<article>
+											<span class="image fit"><img src="images/02_FPGA_proximity_buzzer.png" alt="" /></span>
+											<h3>Proximity-controlled System</h3>
+											<p>This FPGA project utilized an infared proximity sensor, two switches and two pushbuttons as inputs, and a buzzer, four 7-segment displays and an LED array as outputs. </p>
+											<p>An ADC was used to read the proximity sensor output and was converted to a distance value using a LUT obtained using experimental values and curve fitting. The value read from the sensor was also displayed on the 7-segment displays, as either a voltage or distance value, and used to control the frequency of the buzzer and the brightness of the LEDs using PWM.</p>
+											<ul class="actions">
+												<li><a href="https://github.com/joeya20/ENEL453/tree/main/ENEL%20453%20Lab%204" class="button" target="_blank">GitHub</a></li>
+											</ul>
+										</article>
+										<article>
+											<span class="image fit"><img src="images/06_countdown_timer.gif" alt="" /></span>
+											<h3>Countdown Timer</h3>
+											<p>This is the first project I've completed using SystemVerilog, and the first FSM I've implemented using a HDL/on an FPGA. This project uses two pushbuttons and one switch as inputs - the switch is used as a reset, and the two pushbuttons are used as a start/stop and to increment the timer. The current value of the timer is displayed on four 7-segment displays, two for minutes (0-99) and two for seconds (0-59). When the end of the timer is reached, an array of LEDs blinks at a 1 Hz frequency and 50% duty cycle.</p>
+											<ul class="actions">
+												<li><a href="https://github.com/joeya20/FPGA-countdown-timer" class="button" target="_blank">GitHub</a></li>
+											</ul>
+										</article>
+									</div>
+								</section>
+								
+
+						</div>
 					</div>
 
-				<!-- Contact -->
-					<section id="contact">
+				<!-- Sidebar -->
+					<div id="sidebar">
 						<div class="inner">
-							<section>
-								<form method="post" action="https://getform.io/f/d340529a-3cf0-4153-84c3-b6d74be59794">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="6"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Clear" /></li>
-									</ul>
-								</form>
-							</section>
-							<section class="split">
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-envelope"></span>
-										<h3>Email</h3>
-										<a href="mailto:joey.ahkiow@gmail.com">joey.ahkiow@gmail.com</a>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-phone"></span>
-										<h3>Phone</h3>
-										<span>(403) 918-8778</span>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-home"></span>
-										<h3>Address</h3>
-										<span>Calgary, AB <br>
-										Canada</span>
-									</div>
-								</section>
-							</section>
-						</div>
-					</section>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<ul class="icons">
-								<li><a href="https://www.github.com/joeya20" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
-								<li><a href="https://www.linkedin.com/in/joeyah-kiow" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Joey Ah-kiow</li>
-							</ul>
+							<!-- Search -->
+								<!-- <section id="search" class="alt">
+									<form method="post" action="#">
+										<input type="text" name="query" id="query" placeholder="Search" />
+									</form>
+								</section> -->
+
+							<!-- Menu -->
+								<nav id="menu">
+									<header class="major">
+										<h2>Menu</h2>
+									</header>
+									<ul>
+										<li><a href="#header">About</a></li>
+										<li><a href="#projects">Projects</a></li>
+									</ul>
+								</nav>
+
+							<!-- Section -->
+								<section>
+									<header class="major">
+										<h2>Get in touch</h2>
+									</header>
+									<ul class="contact">
+										<li class="icon solid fa-envelope"><a href="mailto:joey.ahkiow@gmail.com">joey.ahkiow@gmail.com</a></li>
+										<li class="icon solid fa-phone">(403)-918-8778</li>
+										<li class="icon solid fa-home">Calgary, AB</li>
+									</ul>
+								</section>
+
+							<!-- Footer -->
+								<footer id="footer">
+									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+								</footer>
+
 						</div>
-					</footer>
+					</div>
 
 			</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
