--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
 									<ul class="icons">
 										<li><a href="https://www.github.com/joeya20" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
 										<li><a href="https://www.linkedin.com/in/joeyah-kiow" class="icon brands alt fa-linkedin-in" target="_blank"><span class="label">LinkedIn</span></a></li>
-										<!-- <li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li> -->
 									</ul>
 								</header>
 
@@ -36,7 +33,7 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hi, I’m Joey</h1>
+											<h1>Hi, I’m Joey!</h1>
 											<p>Electrical and Computer Engineering Student</p>
 										</header>
 										<p>I am an Electrical and Computer Engineering student at the University of Calgary, and I am currently completing a 16 month co-op at TC Energy, an Oil and Gas midstream company based in Calgary, Canada. I will finish my co-op and begin the final year of my BSc. in September 2022 and graduate in May 2023. Afterwards, I plan on pursuing graduate studies in Electrical and Computer Engineering. My potential research interests mainly revolve around computer architecture and embedded systems.</p>
@@ -46,9 +43,6 @@
 											<li><a href="./Joey_Ah-kiow_Transcript.pdf" class="button icon solid fa-download" download>Download my transcript</a></li>
 										</ul>									
 									</div>
-									<!-- <span class="image object">
-										<img src="images/pic10.jpg" alt="" />
-									</span> -->
 								</section>
 
 							<!-- Section -->
@@ -103,13 +97,6 @@
 					<div id="sidebar">
 						<div class="inner">
 
-							<!-- Search -->
-								<!-- <section id="search" class="alt">
-									<form method="post" action="#">
-										<input type="text" name="query" id="query" placeholder="Search" />
-									</form>
-								</section> -->
-
 							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
@@ -135,7 +122,7 @@
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+									<p class="copyright">HTML/CSS Template: <a href="https://html5up.net">HTML5 UP</a>.</p>
 								</footer>
 
 						</div>
