--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 											<h1>Hi, I’m Joey!</h1>
 											<p>Electrical and Computer Engineering Student</p>
 										</header>
-										<p>I am an Electrical and Computer Engineering student at the University of Calgary, and I am currently completing a 16 month co-op at TC Energy, an Oil and Gas midstream company based in Calgary, Canada. I will finish my co-op and begin the final year of my BSc. in September 2022 and graduate in May 2023. Afterwards, I plan on pursuing an M.Sc. or Ph.D. in Electrical and Computer Engineering. My potential research interests mainly revolve around computer architecture or embedded systems.</p>
+										<p>I am an Electrical and Computer Engineering student at the University of Calgary, and I am currently completing a 16 month co-op at TC Energy, an Oil and Gas midstream company based in Calgary, Canada. I will finish my co-op and begin the final year of my BSc. in September 2022 and graduate in May 2023. Afterwards, I plan on pursuing an M.Sc. or Ph.D. in Electrical and Computer Engineering, with my research interests being computer architecture or embedded systems.</p>
 										<p>Please contact me if you have any questions, resource/project recommendations, or just want to connect/chat!</p>									
 										<ul class="actions">
 											<li><a href="./Joey_Ah-kiow_Resume.pdf" class="button icon solid fa-download" download>Download my resume</a></li>
