--- a/index.html
+++ b/index.html
@@ -36,7 +36,13 @@
 											<h1>Hi, I’m Joey!</h1>
 											<p>Electrical and Computer Engineering Student</p>
 										</header>
-										<p>I am an Electrical and Computer Engineering student at the University of Calgary, and I am currently completing a 16 month co-op at TC Energy, an Oil and Gas midstream company based in Calgary, Canada. I will finish my co-op and begin the final year of my BSc in September 2022 and graduate in May 2023. Afterwards, I plan on pursuing an MSc or PhD. My potential research interests lie within computer architecture and embedded systems.</p>
+
+										<p>I am an Electrical and Computer Engineering student at the University of Calgary, and I am currently completing a 16 month co-op at TC Energy, an Oil and Gas midstream company based in Calgary, Canada. I will finish my co-op and begin the final year of my BSc in September 2022 and graduate in May 2023. Afterwards, I plan on pursuing an M.Sc. in ECE.</p>
+
+										<p>
+											I am currently a research assistant in Dr. Benjamin Tan's research group on finding ways to detect hardware security weaknesses in earlier stages of RTL design. So far, this has involved building a background in security engineering, and hardware security and improving my skills in digital design/verification.
+										</p>
+
 										<p>Please contact me if you have any questions, resource/project recommendations, or just want to connect/chat!</p>	
 										<ul class="actions">
 											<li><a href="./Joey_Ah-kiow_Resume.pdf" class="button fit icon solid fa-download" download>Download my resume</a></li>
